--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -22,7 +22,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-    overflow: hidden; /* Empêche l'overflow au niveau du conteneur */
+    overflow: hidden;
 }
 
 .login-box {
@@ -37,9 +37,7 @@ body {
 
 .logo img {
     width: 20rem;
-    margin-bottom: 0px;
 }
-
 
 label {
     display: flex;
@@ -77,7 +75,6 @@ button:hover {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-
 }
 
 .support-links a {
@@ -117,27 +114,10 @@ button:hover {
     text-decoration: underline;
 }
 
-/* Illustration Styles */
-.illustration img {
-    max-width: 100%; /* Empêche les images de dépasser leur conteneur */
-    max-height: 100px; /* Limite la hauteur pour éviter qu'elles dépassent */
-    height: auto;
-    width: auto;
-    margin-bottom: 10px;
-    overflow: hidden;
-}
-.illustration {
-    position: fixed;
+/* Illustrations */
+.illustration_left, .illustration_right {
+    position: absolute;
     bottom: 0;
+    width: auto;
+    max-width: 300px;
 }
-
-.illustration.left {
-    left: 0;
-    margin-left: 10px;
-}
-
-.illustration.right {
-    right: 0;
-    margin-right: 10px;
-}
-
